--- a/l1_2.md
+++ b/l1_2.md
@@ -1,1 +1,2 @@
 ![image](https://github.com/user-attachments/assets/f0547707-8017-475d-8c8e-d80bcaeb43bb)
+![image](https://github.com/user-attachments/assets/e8a3a32e-705a-48cc-b614-e02f2283d752)
