--- a/l1_2.md
+++ b/l1_2.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/user-attachments/assets/9f16bad3-fed6-4229-8e43-aee3cac5c28d)
+![image](https://github.com/user-attachments/assets/df177107-f0d3-4d70-972f-74ce7b495ad2)
+![image](https://github.com/user-attachments/assets/b1f0035e-89b9-4d56-b9d8-3448a229671b)
