--- a/l1_3.md
+++ b/l1_3.md
@@ -1,1 +1,2 @@
 ![image](https://github.com/user-attachments/assets/4bbdd136-74d3-4740-b481-9df08c74f70d)
+![image](https://github.com/user-attachments/assets/445d0eb5-26da-4272-a977-de16dd3b8c39)
