--- a/l2_2.md
+++ b/l2_2.md
@@ -1,2 +1,3 @@
 ![image](https://github.com/user-attachments/assets/da17c85e-2c6b-4be1-a1c0-432bd401a767)
 ![image](https://github.com/user-attachments/assets/50622d21-d9ff-4bb3-a8be-60eb3b6994aa)
+![image](https://github.com/user-attachments/assets/ad41b7b9-ebf5-4da7-9ce3-e86cf3e2f367)
